<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    android:elevation="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/card_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/white"
            android:text="@string/id"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/card_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/white"
            android:text="@string/size"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/card_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/white"
            android:text="@string/plant"
            android:textSize="15sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>