<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SmsMessaging">

    <TextView
        android:id="@+id/tv_sms_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/plant"
        android:textSize="20dp"
        android:inputType="number|text"
        android:textColor="@color/black"
        tools:ignore="Autofill,TextFields"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:hint="@string/phone_no"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:scrollbarSize="2sp"
            android:scrollbars="horizontal"
            android:inputType="number|text"
            tools:ignore="Autofill,TextFields"
            android:layout_weight="1.5"/>

        <ImageView
            android:id="@+id/add_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_add_black_24dp"
            android:layout_weight="8.5"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="16sp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_margin="16sp"
        android:gravity="start"
        android:textColor="@color/black"
        android:hint="@string/message"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btn_send_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/send"
        android:elevation="5sp"
        android:background="@drawable/darkgreen"
        android:textColor="@color/white"/>


</LinearLayout>