<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ManufacturingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:id="@+id/tv_Docid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Id :"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_margin="10sp"/>
            <Spinner
                android:id="@+id/spin_docid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:id="@+id/tv_tool"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tool"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_c_tool"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rd_c_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:visibility="gone">
            <RadioButton
                android:id="@+id/c_existing"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:text="@string/existing"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/c_New"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:text="@string/New"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/et_c_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textShortMessage"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10sp"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:id="@+id/tv_plant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/plant"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_c_plant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:id="@+id/tv_extr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/extr"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_c_extr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handed_over"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_handeddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_handedtime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select_time"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commitment"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_commitdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_committime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select_time"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <EditText
                android:id="@+id/et_c_remarks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textLongMessage"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="Remarks"
                android:textColorHint="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <Button
                android:id="@+id/btn_c_send"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:text="@string/send"
                android:elevation="5sp"
                android:background="@drawable/darkgreen"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>